// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`快照测试 分钟视图 1`] = `
<div
  className="sc-bdvvtL gZtOTl"
>
  <div
    className="sc-gsDKAQ gtHamL sinoui-clock__pointer-minute-dot"
  />
</div>
`;

exports[`快照测试 时钟视图 1`] = `
<div
  className="sc-bdvvtL bZiksx"
>
  <div
    className="sc-gsDKAQ gtHamL sinoui-clock__pointer-minute-dot"
  />
</div>
`;
